--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-#grid-container {
+body {
+	background-color: lightgray;
+}
+#container {
+	display: flex;
+	justify-content: center;
 	border: 2px solid red;
+	background-color: aliceblue;
+	width: max-content;
+	margin: auto;
 }
