--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
 	background-color: lightgray;
 }
-#container {
+.container {
 	display: flex;
 	justify-content: center;
 	border: 2px solid red;
