--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
 	background-color: lightgray;
 }
 .container {
@@ -8,4 +8,4 @@ body {
 	background-color: aliceblue;
 	width: max-content;
 	margin: auto;
-}
+} */
