--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 * {
 	margin: 0;
 	padding: 0;
-	
 }
 
 body {
-	background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
-	
+	background-image: linear-gradient(
+		to top,
+		#dad4ec 0%,
+		#dad4ec 1%,
+		#f3e7e9 100%
+	);
 }
 
 #sketch-area {
@@ -19,4 +22,46 @@ body {
 
 .cell {
 	border: 1px solid whitesmoke;
+}
+
+#slider-container {
+	margin: 0 auto;
+}
+
+.slider {
+	-webkit-appearance: none;
+	appearance: none;
+	height: 25px;
+	width: 100%;
+	background-color: #f3e7e9;
+	outline: none;
+	opacity: 0.7;
+	-webkit-trasition: 0.2s;
+	transition: opacity 0.2s;
+}
+
+#slider-value {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.slider:hover {
+	opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 25px;
+	height: 25px;
+	background:#dad4ec ;
+	cursor: pointer;
+	border: solid whitesmoke;
+}
+
+.slider::-moz-range-thumb {
+	width: 25px;
+	height: 25px;
+	background: #dad4ec;
+	cursor: pointer;
 }
